--- a/vignettes/corshrink.bib
+++ b/vignettes/corshrink.bib
@@ -99,4 +99,13 @@
   publisher={Oxford University Press}
 }
 
-
+@article{higham2002computing,
+  title={Computing the nearest correlation matrix—a problem from finance},
+  author={Higham, Nicholas J},
+  journal={IMA journal of Numerical Analysis},
+  volume={22},
+  number={3},
+  pages={329--343},
+  year={2002},
+  publisher={Oxford University Press}
+}
