updated imports and the TODO

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,13 +18,19 @@ TO DO
 * Merge Installation and Examples into a "Quick Start" section (see
   Logolas package for illustration).
 
+  -- Done. Also added vignettes part at the end, similar to Logolas.
+
 * Remove the unnecessary @importFrom statements; e.g., function
   CorShrinkData does not use "melt" from the reshape2 package anywhere
   in the code.
 
+  -- Removed unnecessary statements
+
 * Avoid using @import statements; use @importFrom instead. Ideally,
   you do not want any "import" statements in NAMESPACE, only
   "importFrom" statements.
+
+  -- Converted all import to importFrom
 
 * Move "test_unused" to "tests", and create a proper "testthat" suite
   of tests using the scripts you have in the test directory. See my
