--- a/vignettes/corshrink.Rmd
+++ b/vignettes/corshrink.Rmd
@@ -121,11 +121,8 @@ sample_by_feature_data[1:5,1:5]
 
 We estimate the adaptively shrunk correlation matrix for this data using **CorShrink**.
 
-```{r corshrink_data, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=7}
-par(mfrow=c(1,2))
-out <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image_original = TRUE, 
-                     image_corshrink = TRUE, 
-                     image.control = list(x.cex = 0.3, y.cex = 0.3))
+```{r corshrink_data, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=10}
+out <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image = "both")
 ```
 
 The function outputs a list with two elements which are two versions of CorShrink estimated matrices  - `ash_cor_only` and `ash_cor_PD`. `ash_cor_only` version may not be positive definite, while `ash_cor_PD` is the nearest positive definite approximation to `ash_cor_only` version.
@@ -139,13 +136,11 @@ out$ash_cor_PD[1:5, 1:5]
 
 **CorShrink** takes as input not just the samples by features data matrix but also a matrix of pairwise correlations with a matrix of number of samples for each pair contributing to the correlation.
 
-```{r load_cormat, eval=TRUE, warning = FALSE}
+```{r corshrinkmat, eval=TRUE, warning = FALSE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=10}
 data("pairwise_corr_matrix")
 data("common_samples")
-out <- CorShrinkMatrix(pairwise_corr_matrix, common_samples)
-out$ash_cor_PD[1:5,1:5]
+out <- CorShrinkMatrix(pairwise_corr_matrix, common_samples, image = "both")
 ```
-
 
 ### *CorShrinkVector*
 
@@ -166,10 +161,8 @@ We have so far looked at *CorShrinkData*, *CorShrinkMatrix* and *CorShrinkVector
 
 ### *CorShrinkData* - resampling
 
-```{r corshrink_data_boot, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=7}
-par(mfrow=c(1,2))
-out <- CorShrinkData(sample_by_feature_data, sd_boot = TRUE, image_original = TRUE, 
-                     image_corshrink = TRUE, image.control = list(x.cex = 0.3, y.cex = 0.3))
+```{r corshrink_data_boot, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=10}
+out <- CorShrinkData(sample_by_feature_data, sd_boot = TRUE, image = "both")
 ```
 
 The algorithm works by first computing a Bootstrap estimate of the standard error of the Fisher z-scores for each pair and then using this estimate together with the correlations to shrink the latter. 
@@ -178,10 +171,9 @@ The algorithm works by first computing a Bootstrap estimate of the standard erro
 
 The breakdown can be formulated at the level of a correlation matrix as follows.
 
-```{r corshrink_mat_boot, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=7}
-par(mfrow = c(1,2))
+```{r corshrink_mat_boot, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=10}
 zscoreSDmat <- bootcorSE_calc(sample_by_feature_data, verbose = FALSE)
-out <- CorShrinkMatrix(pairwise_corr_matrix, zscore_sd = zscoreSDmat, image_original = TRUE, image_corshrink = TRUE)
+out <- CorShrinkMatrix(pairwise_corr_matrix, zscore_sd = zscoreSDmat, image = "both")
 ```
 
 ---
@@ -192,37 +184,31 @@ So far, in all our examples, we assumed that the estimated correlations between 
 
 One can choose a fixed non-zero target in `mode` as well. 
 
-```{r extras_1, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=7}
-par(mfrow=c(1,2))
-out <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image_corshrink = TRUE, 
-                     image.control = list(x.cex = 0.3, y.cex = 0.3,
-                      main_corshrink = "CorShrink (target = 0)"))
-out <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image_corshrink = TRUE, 
+```{r extras_1, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=10}
+out1 <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image = "output", 
+                      image.control = list(title = "CorShrink (target = 0)", lab_size = 2))
+out2 <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image = "output", 
                      ash.control = list(mode = "estimate"),
-                     image.control = list(x.cex = 0.3, y.cex = 0.3,
-                      main_corshrink = "CorShrink (target = estimated)"))
+                     image.control = list(title = "CorShrink (target = estimated)", lab_size = 2))
+
+library(gridExtra)
+grid.arrange(out1$image, out2$image, nrow = 1)
 ```
 
 In general, *CorShrink* assumes a normal prior for the population Fisher z-scores. But under specific settings, a non-symmetric distribution , such as uniform or half-uniform could be a better fit. This can be achieved using the `mixcompdist` in `ash.control`. 
 
 ```{r extras_2, eval=TRUE, warning = FALSE, message=FALSE, fig.align = "left", fig.show="asis", dpi=144, fig.width=13, fig.height=10}
-par(mfrow=c(2,2))
-out <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image_corshrink = TRUE, 
-                     ash.control = list(mixcompdist = "normal"),
-                     image.control = list(x.cex = 0.3, y.cex = 0.3,
-                            main_corshrink = "CorShrink (normal)"))
-out <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image_corshrink = TRUE, 
-                     ash.control = list(mixcompdist = "uniform"),
-                     image.control = list(x.cex = 0.3, y.cex = 0.3,
-                            main_corshrink = "CorShrink (uniform)"))
-out <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image_corshrink = TRUE, 
-                     ash.control = list(mixcompdist = "halfuniform"),
-                     image.control = list(x.cex = 0.3, y.cex = 0.3,
-                        main_corshrink = "CorShrink (halfuniform)"))
-out <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image_corshrink = TRUE,  
-                     ash.control = list(mixcompdist = "+uniform"),
-                     image.control = list(x.cex = 0.3, y.cex = 0.3,
-                        main_corshrink = "CorShrink (+uniform)"))
+out1 <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image = "output", 
+                     ash.control = list(mixcompdist = "normal"))
+out2 <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image = "output", 
+                     ash.control = list(mixcompdist = "uniform"))
+out3 <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image = "output", 
+                     ash.control = list(mixcompdist = "halfuniform"))
+out4 <- CorShrinkData(sample_by_feature_data, sd_boot = FALSE, image = "output",  
+                     ash.control = list(mixcompdist = "+uniform"))
+
+library(gridExtra)
+grid.arrange(out1$image, out2$image, out3$image, out4$image, nrow = 2)
 ```
 
 
